--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ series_note: The Formation of Christendom, Volume VI
 subjects:
 - !lcsh 'Church history -- Primitive and early church, ca. 30-600'
 - !lcc 'BR'
+- GITenberg
 title: The Holy See and the Wandering of the Nations, from St. Leo I to St. Gregory
   I
 url: http://www.gutenberg.org/ebooks/29268
